[gd_scene load_steps=14 format=3 uid="uid://bcjbkb73mtovm"]

[ext_resource type="Script" path="res://objects/essential/Player/Player.gd" id="1_cniba"]
[ext_resource type="Script" path="res://objects/level/LayerSwitcher/LayerSwitcherSensor.gd" id="2_xh0bu"]
[ext_resource type="Script" path="res://objects/essential/Player/PlayerCamera.gd" id="3_q22vw"]
[ext_resource type="SpriteFrames" uid="uid://d23iwpusrgjcp" path="res://objects/essential/Player/Sonic/sonic.tres" id="4_voifm"]
[ext_resource type="AudioStream" uid="uid://d3w1grc7g4hit" path="res://objects/essential/Player/sounds/jump.wav" id="5_y8ctc"]
[ext_resource type="AudioStream" uid="uid://ghu75tfy8l5a" path="res://objects/essential/Player/sounds/roll.wav" id="6_qv3jl"]
[ext_resource type="AudioStream" uid="uid://bp0knqoy0yic0" path="res://objects/essential/Player/sounds/skid.wav" id="7_beujc"]
[ext_resource type="AudioStream" uid="uid://doe6b03ov51ex" path="res://objects/essential/Player/sounds/die.wav" id="9_5gunf"]
[ext_resource type="AudioStream" uid="uid://bjsw3nlef0d2x" path="res://objects/essential/Player/sounds/dash.wav" id="9_qc8l6"]
[ext_resource type="AudioStream" uid="uid://swfmynw0abdm" path="res://objects/essential/Player/sounds/ringloss.wav" id="10_l3uft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r84wf"]
size = Vector2(18, 38)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_50137"]
radius = 9.0
height = 38.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cu8nw"]
size = Vector2(0, 0)

[node name="Player" type="CharacterBody2D"]
collision_layer = 15
collision_mask = 7
collision_priority = 3.0
floor_stop_on_slope = false
floor_max_angle = 1.39626
floor_snap_length = 8.0
safe_margin = 0.25
script = ExtResource("1_cniba")

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r84wf")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Shape_UNUSED" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_50137")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="LayerSwitcherSensor" type="Area2D" parent="."]
collision_layer = 65535
collision_mask = 65535
script = ExtResource("2_xh0bu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LayerSwitcherSensor"]
shape = SubResource("RectangleShape2D_cu8nw")
debug_color = Color(1, 0.27451, 0.262745, 0.419608)

[node name="Camera" type="Camera2D" parent="."]
top_level = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0
script = ExtResource("3_q22vw")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("4_voifm")
animation = &"push"
offset = Vector2(0, 0.5)

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_y8ctc")
bus = &"SFX"

[node name="roll_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qv3jl")
bus = &"SFX"

[node name="skid_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_beujc")
bus = &"SFX"

[node name="dash_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_qc8l6")
bus = &"SFX"

[node name="hurt_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5gunf")

[node name="ringloss_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_l3uft")

[connection signal="touch_badnik" from="." to="." method="_on_touch_badnik"]
[connection signal="layer_switch" from="LayerSwitcherSensor" to="." method="_on_layer_switch"]
